2009-10-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h: changed W_STRUCT_AS_ARG to error E_STRUCT_AS_ARG
	* src/SDCCsymt.c(aggregateToPointer), 
	* src/SDCCast.c(processParms): throw error for struct parameters,
	  fixes bug 2874687

2009-10-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c(initValPointer, initPointer): fixed bug 2166213

2009-10-05 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asmain.c:
	  removed forced wide listing format for symbol table and
	  removed forced enable case sensitivity for symbols in case of sdas

2009-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/asxxsrc/assubr.c: include sdas.h
	* as/asxxsrc/assym.c(symeq): type of n is size_t
	* src/SDCCglue.c(initPointer): fixed bug 2655200 by using oclass->ptrType
	* support/regression/tests/bug2655200.c: enabled --model-medium

2009-10-04 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asdata.c, as/asxxsrc/aslex.c, as/asxxsrc/assubr.c,
	  as/asxxsrc/assym.c, as/asxxsrc/asxxxx.h:
	  partially synced with asxxxx v2.0
	* src/ds390/main.c, src/hc08/main.c, src/mcs51/main.c, src/z80/main.c:
	  added -z and -w option to assembler invocation

2009-10-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/string.h,
	* device/lib/_strlen.c: return size_t
	* device/lib/_memchr.c,
	* device/lib/_strcspn.c: cosmetic changes
	* device/lib/sincosf.c,
	* device/lib/cosf.c,
	* device/lib/sinf.c: use BOOL instead of larger int
	* src/z80/gen.c,
	* src/z80/mappings.i: cosmetic changes
	* src/SDCCsymt.c (pointerTypes, mergeDeclSpec, checkSClass): fixed bug 2817646
	  (checkFunction): disabled __naked
	  (dbuf_printTypeChain): more like RFE 2824498, print C-ish
	  (isRestrict): added
	* src/SDCCsymt.h: added IS_RESTRICT, mergeDeclSpec, isRestrict
	* src/SDCC.y: use mergeDeclSpec to fix bug 2817646
	* src/SDCCicode.c (checkPtrQualifiers, checkTypes, geniCodeAssign,
	  geniCodeParms, geniCodeCall): fixed bug 1302048